banners over images correct but not responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,10 +69,17 @@ footer {
     margin: 10px 10px 0 0
 }
 
+.portfolio {
+    padding-bottom: 0px;
+}
+
 .boxx {
-    bottom: 100px;
+    position: relative;
+    bottom: 40px;
+    left: 38px;
     background: #4aaaa5;
     color: white;
+    max-width: 200px;
     
     
 }
